//protobuf的配置文件
syntax="proto3";//声明了protobuf的版本
package fixbug;//声明了代码所在的包（对于C++来说是namespace）

//定义下面的选项，表示生成service服务类和rpc方法描述，默认不生成
option cc_generic_services=true;

//重复的代码定义成一个类型
//返回代码
message ResultCode
{
    int32 errcode=1;//4字节整数
    bytes errmsg=2;
}

//数据（单个数据） 列表（数组） 映射表（） 
//定义登录请求消息类型
message LoginRequest{
    bytes name=1;//表示第一个参数是name
    bytes pwd=2;
}
//定义登录响应消息类型
message LoginResponse{
    ResultCode result=1;
    bool success=3;
}
//请求体
message GetFriendLisetsRequest{
    uint32  userid=1;
}
message User{
    bytes name=1;
    uint32 age=2;
    enum Sex{//枚举类型，必须包含值为0的枚举项
        MAN=0;
        WOMAN=1;
    }
    Sex sex=3;//一共三个成员变量
}
//返回体
message GetFriendLisetsResponse{
    ResultCode result=1;
    repeated User friend_list=2;//定义了一个列表类型
}

//在protobuf里面怎么定义描述rpc方法的类型 - service
service UserServiceRpc{
    rpc Login(LoginRequest) returns(LoginResponse);
    rpc GetFriendLisets(GetFriendLisetsRequest) returns(GetFriendLisetsResponse);
}